# http_fetch_methods

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
http_fetch_methods/: sse.py  wss.py
http_fetch_methods/support/: constants.py  random_walk.py
templates/: sse.html  wss.html
